# learnphysics

./: CMakeLists.txt
src/: bvh.c  bvh.h  collision.c  collision.h  geometry_utils.c  geometry_utils.h  gizmos.c  gizmos.h  main.c  particles.c  particles.h  primitives.c  primitives.h  raylib_utils.c  raylib_utils.h  resources.c  resources.h  rigidbody.c  rigidbody.h  rlights.h  scene.c  scene.h  tools.c  tools.h  utils.c  utils.h
src/graphic/: draw_primitive.c  draw_primitive.h
src/utils/: random.h  stb_ds.h
tests/: CMakeLists.txt
